--- a/src/components/ProfileBox/ProfileBox.css
+++ b/src/components/ProfileBox/ProfileBox.css
@@ -1,114 +1,130 @@
-.profile-box-container{
+.profile-box-container {
+/* border:1px solid blue; */
+width:100%;
+height:170px;
+margin-top:50px;
+z-index:10;}
+
+.profile-box-name-container {
+/* border: 1px solid red; */
+width: 900px;
+height:90px;
+margin: auto;
+border-bottom: 1px solid #ddd;}
+
+.avatar {
+    vertical-align: middle;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 15px;
+}
+
+.profile-box-name {
+    font-size:70px;
+    width:500px;
+    float:left;
+    /* border:1px solid green; */
+    font-family: 'Rajdhani', sans-serif;}
+
+.profile-box-school-container {
+/* border:1px solid blue; */
+width:550px;
+height:50px;
+margin:15px auto 0 auto;
+padding:auto;}
+
+.profile-box-school {
+    text-align: center;
+    margin:auto;
+    font-size:20px;
+    font-weight: 200}
+
+.linkedin-link-container {
     /* border:1px solid blue; */
-    width:100%;
-    height:170px;
-    margin-top:50px;
-    z-index:10;}
+    background:rgb(255, 255, 255);
+    border:1px solid rgb(37, 124, 195);
+    /* width:50px; */
+    /* height:50px; */
+    padding:3px 6px;
+    margin-top:20px;
+    margin-right: 5px;
+    border-radius: 6px;
+    float:right;
+}
 
-    .profile-box-name-container{
-        /* border: 1px solid red; */
-        width: 800px;
-        height:90px;
-        margin: auto;
-        border-bottom: 1px solid #ddd;}
+.linkedin-link-container:hover {
+    background: rgb(213, 234, 252)
+}
 
-        .avatar {
-            vertical-align: middle;
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            float: left;
-            margin-right: 15px;
-        }
-        
-        .profile-box-name{
-            font-size:70px;
-            width:500px;
-            float:left;
-            /* border:1px solid green; */
-            font-family: 'Rajdhani', sans-serif;}
+.github-link-container {
+    /* border:1px solid blue; */
+    background:rgb(255, 255, 255);
+    border:1px solid rgb(49, 51, 53);
+    /* width:50px; */
+    /* height:50px; */
+    padding:3px 6px;
+    margin-top:20px;
+    margin-right: 15px;
+    border-radius: 6px;
+    float:right;
+}
 
-    .profile-box-school-container{
-        /* border:1px solid blue; */
-        width:550px;
-        height:50px;
-        margin:15px auto 0 auto;
-        padding:auto;}
+.github-link-container:hover {
+    background: rgb(214, 217, 219)
+}
 
-        .profile-box-school{
-            text-align: center;
-            margin:auto;
-            font-size:20px;
-            font-weight: 200}
+.home-link-container {
+    width:860px;
+    height:100px;
+    overflow: hidden;
+    /* border:1px solid blue; */
+    margin: auto;
+    position: relative;
+    top:-55px;
+    z-index: 20;
 
-        .linkedin-link-container{
-            /* border:1px solid blue; */
-            background:rgb(255, 255, 255);
-            border:1px solid rgb(37, 124, 195);
-            /* width:50px; */
-            /* height:50px; */
-            padding:3px 6px;
-            margin-top:20px;
-            margin-right: 5px;
-            border-radius: 6px;
-            float:right;
-        }
-
-        .linkedin-link-container:hover{
-            background: rgb(213, 234, 252)
-        }
-
-        .home-link-container{
-            width:780px;
-            height:100px;
-            overflow: hidden;
-            /* border:1px solid blue; */
-            margin: auto;
-            position: relative;
-            top:-70px;
-            z-index: 20;
-
-        }
-        .home-link{
-            width:40px;
-            opacity:.3;
-            margin:auto;
-            padding-top: 10px;
-            transition:.3s ease all;
-            z-index: 20;
-        }
-        .home-link:hover{
-            opacity: .5;
-            transition:.3s ease all;
-            
-        }
-        .is-home{
-            opacity: 0;
-            transition: 1s ease all;
-        }
-        .is-home:hover{
-            opacity: 0;
-            cursor: default;
-        }
-    .resume-button-wrapper{
-        padding-top: 35px;
-        padding-right: 1px;
-        border-radius: 5px;
-        float: right;
-    }
-    .resume-button{
-        bottom: 0;
-        margin-top:15px;
-        padding:14px 20px;
-        font-size: 20px;
-        background-color: #fff;
-        border: 1px solid rgb(219, 63, 63);
-        color:rgb(219, 63, 63);
-        font-weight: normal;
-        margin: 55px 15px 0 15px;
-        text-decoration: none;
-        border-radius: 6px;
-    }
-    .resume-button:hover{
-        background: rgb(250, 240, 240);
-    }
+}
+.home-link {
+    width:40px;
+    opacity:.3;
+    margin:auto;
+    transition:.3s ease all;
+    z-index: 20;
+}
+.home-link:hover {
+    opacity: .5;
+    transition:.3s ease all;
+    
+}
+.is-home {
+    opacity: 0;
+    transition: 1s ease all;
+}
+.is-home:hover {
+    opacity: 0;
+    cursor: default;
+}
+.resume-button-wrapper {
+padding-top: 35px;
+padding-right: 1px;
+border-radius: 5px;
+float: right;
+}
+.resume-button {
+bottom: 0;
+margin-top:15px;
+padding:14px 20px;
+font-size: 20px;
+background-color: #fff;
+border: 1px solid rgb(219, 63, 63);
+color:rgb(219, 63, 63);
+font-weight: normal;
+margin: 55px 15px 0 15px;
+text-decoration: none;
+border-radius: 6px;
+}
+.resume-button:hover {
+background: rgb(250, 240, 240);
+}
