gitflow-feature-stash: ProjectFilters
Project link filter buttons used to filter by project group.

--- a/src/components/ProfileBox/ProfileBox.css
+++ b/src/components/ProfileBox/ProfileBox.css
@@ -1,16 +1,18 @@
 .profile-box-container {
-/* border:1px solid blue; */
-width:100%;
-height:170px;
-margin-top:50px;
-z-index:10;}
+    /* border:1px solid blue; */
+    width:100%;
+    height:170px;
+    margin-top:50px;
+    z-index:10;
+    }
 
 .profile-box-name-container {
-/* border: 1px solid red; */
-width: 900px;
-height:90px;
-margin: auto;
-border-bottom: 1px solid #ddd;}
+    /* border: 1px solid red; */
+    width: 900px;
+    height:90px;
+    margin: auto;
+    border-bottom: 1px solid #ddd;
+    }
 
 .avatar {
     vertical-align: middle;
@@ -26,20 +28,34 @@ border-bottom: 1px solid #ddd;}
     width:500px;
     float:left;
     /* border:1px solid green; */
-    font-family: 'Rajdhani', sans-serif;}
+    font-family: 'Rajdhani', sans-serif;
+}
 
 .profile-box-school-container {
-/* border:1px solid blue; */
-width:550px;
-height:50px;
-margin:15px auto 0 auto;
-padding:auto;}
+    /* border:1px solid blue; */
+    width:700px;
+    height:50px;
+    margin:15px auto 0 auto;
+    padding:auto;
+}
 
-.profile-box-school {
-    text-align: center;
+.profile-box-school-wrapper {
+    text-align:left;
     margin:auto;
     font-size:20px;
-    font-weight: 200}
+    font-weight:200;
+}
+
+.profile-box-school {
+    padding-left:10px;
+    padding-right:10px;
+    /* border-left: 1px solid rgb(175, 173, 173); */
+}
+
+.profile-box-school-left {
+    padding-left:10px;
+    padding-right:10px;
+}
 
 .linkedin-link-container {
     /* border:1px solid blue; */
@@ -82,10 +98,10 @@ padding:auto;}
     /* border:1px solid blue; */
     margin: auto;
     position: relative;
-    top:-55px;
+    top:-43px;
     z-index: 20;
-
 }
+
 .home-link {
     width:40px;
     opacity:.3;
@@ -93,25 +109,29 @@ padding:auto;}
     transition:.3s ease all;
     z-index: 20;
 }
+
 .home-link:hover {
     opacity: .5;
-    transition:.3s ease all;
-    
+    transition:.3s ease all;  
 }
+
 .is-home {
     opacity: 0;
     transition: 1s ease all;
 }
+
 .is-home:hover {
     opacity: 0;
     cursor: default;
 }
+
 .resume-button-wrapper {
 padding-top: 35px;
 padding-right: 1px;
 border-radius: 5px;
 float: right;
 }
+
 .resume-button {
 bottom: 0;
 margin-top:15px;
@@ -125,6 +145,7 @@ margin: 55px 15px 0 15px;
 text-decoration: none;
 border-radius: 6px;
 }
+
 .resume-button:hover {
 background: rgb(250, 240, 240);
 }
