--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,3 +1,29 @@
+.intro-paragraph-container{
+    width:780px;
+    margin:auto;
+    margin:20px auto 80px auto;
+}
+    
+.intro-paragraph{
+    font-size:20px;
+    font-weight:200;
+    line-height: 1.4;
+}
+
+.project-name-container{
+    width:100%;
+    height:45px;
+    /* border-bottom: 1px solid rgb(255, 176, 176); */
+}
+
+.title-name{
+    padding-left: 0px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    color:rgb(87, 87, 87);
+    font-size:32px;
+    font-family: 'Rajdhani', sans-serif;}
+
 .projects-container{
     width:100%;
     margin-top:0px;
@@ -33,106 +59,28 @@
     font: 12px system-ui;
     }
 
-/* Styling for the search filter example
-
-*
-    box-sizing border-box
-
-header
-    background $boy
-    margin-bottom 2rem
+    .my-btn-container{
+        margin-top: 10px;
+    }
     
-main
-    padding 0 2rem
-
-input[type='text']
-    margin 1rem
-    background white
-    font-size 1.3rem
-    border none
-    box-shadow inset 0 0 3px rgba(0,0,0,0.3)
-    border-radius 3px
-    padding 0 2rem
-    width calc(100% - 2rem)
-    height 4rem
+        /* Style the buttons */
+    .btn {
+        border: none;
+        outline: none;
+        padding: 12px 16px;
+        background-color: #f1f1f1;
+        cursor: pointer;
+        margin: 5px;
+        }
     
-ul
-    padding 0
+    /* Add a light grey background on mouse-over */
+    .btn:hover {
+        background-color: #ddd;
+        }
     
-li
-    position relative
-    list-style none
-    display inline-block
-    padding .25rem .75rem
-    margin 2px
-    border-radius 3px
+    /* Add a dark background to the active button */
+    .btn.active {
+        background-color: #666;
+        color: white;
+        }
     
-    &:hover
-    cursor pointer
-    
-    &.girl
-    background lighten($girl, 35)
-    color darken($girl, 25)
-    
-    &:hover
-        background lighten($girl, 30)
-    
-    &.boy
-    background lighten($boy, 25)
-    color darken($boy, 25)
-    
-    &:hover
-        background lighten($boy, 20)
-        
-.favourites
-    
-    li:hover:before
-    content '\00D7'
-    position absolute
-    top -.5rem
-    right -.3rem
-    width 1rem
-    height 1rem
-    z-index 2
-    text-align center
-    line-height 1
-    font-size .9rem
-    vertical-align middle
-    border-radius 50%
-    background tomato
-    border solid 2px white
-    color white
-    box-shadow 0 0 6px rgba(black, 0.3)
-    
-    h4
-    padding 1rem 0
-    font-weight 400
-    font-size 1.3rem
-    margin 0
-    color darken(white, 30)
-    
-    hr 
-    border-bottom 0
-    border-top solid 1px darken(white, 10)
-    margin 1.75rem 0
-    
-.credit
-    padding 1rem 0
-    color darken(white, 30)
-    
-    a
-    color $boy
-    
-button
-    background #d7d7d7
-    color #3b3b3b
-    padding .6rem 1rem
-    font-size .8rem
-    border solid 1px #c7c7c7
-    margin 1rem 0
-    box-shadow 0 3px 10px rgba(black, 0.1)
-    border-radius 3px
-    outline none
-    
-    &:hover
-    background #ddd */
