--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -28,9 +28,10 @@
     width:100%;
     margin-top:0px;
     height:auto;
-    display: flex;
+    display: grid;
     flex-wrap: wrap;
     align-content: flex-start;
+    grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
 }
 
     .projects-project-link-container{
@@ -83,4 +84,33 @@
         background-color: #666;
         color: white;
         }
+
+/* @media only screen and (max-width: 1100px) {
+    .projects-container{
+        
+        width:100%;
+        max-width: 800px;
+        margin:0px auto;
+        height:auto;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        border:1px solid red;
+    
+    }
+    
+        .projects-project-link-container{
+            position:relative;
+            flex: 1;
+            margin: auto;
+            margin: 0 0px 0 0;
+            width:50vw;
+            height:50vw;
+            max-width:50vw;
+            max-height:50vw;
+            padding-top:1vw;
+            border:1px solid green;
+            
+        }
+} */
     
