--- a/src/components/ProjectPage/ProjectPage.css
+++ b/src/components/ProjectPage/ProjectPage.css
@@ -13,6 +13,15 @@
     font-family: 'Rajdhani', sans-serif;
 }
 
+.project-subheader{
+    width:auto;
+    font-size:25px;
+    margin-top: 15px;
+    color:#666;
+    font-weight: normal;
+    font-family: 'Rajdhani', sans-serif;
+}
+
 .showcase-container{
     /* border: 1px solid red; */
     width:780px;
@@ -72,10 +81,42 @@
 }
 
 .project-description{
-    font-size: 23px;
+    font-size: 20px;
     line-height:1.5;
     font-weight: 200;
 }
+
+.tftable {
+    font-size:20px;
+    color:#333333;
+    width:100%;
+    margin-top: 5px;
+    border-width: 1px;
+    border-color: #a9a9a9;
+    border-collapse: collapse;
+    }
+.tftable th {
+    font-size:20px;
+    background-color:#b8b8b8;
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #a9a9a9;
+    text-align:left;
+    }
+.tftable tr {
+    background-color:#ffffff;
+    }
+.tftable td {
+    font-size:20px;
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #a9a9a9;
+    }
+.tftable tr:hover {
+    background-color:#dfdfdf;
+    }
 
 
   @media only screen and (max-width: 1100px) {
@@ -89,6 +130,14 @@
     .project-header{
         width:auto;
         font-size:4vw;
+        color:#666;
+        font-weight: normal;
+        font-family: 'Rajdhani', sans-serif;
+    }
+
+    .project-subheader{
+        width:auto;
+        font-size:2.5vw;
         color:#666;
         font-weight: normal;
         font-family: 'Rajdhani', sans-serif;
@@ -157,5 +206,32 @@
         line-height:1.5;
         font-weight: 200;
     }
-    
+
+    .tftable {
+        font-size:2vw;
+        color:#333333;
+        width:100%;
+        margin-top: 5px;
+        border-width: 1px;
+        border-color: #a9a9a9;
+        border-collapse: collapse;
+        }
+
+    .tftable th {
+        font-size:2vw;
+        background-color:#b8b8b8;
+        border-width: 1px;
+        padding: 8px;
+        border-style: solid;
+        border-color: #a9a9a9;
+        text-align:left;
+        }
+
+    .tftable td {
+        font-size:2vw;
+        border-width: 1px;
+        padding: 8px;
+        border-style: solid;
+        border-color: #a9a9a9;
+        }
 }
