--- a/src/components/ProjectView/ProjectView.css
+++ b/src/components/ProjectView/ProjectView.css
@@ -1,52 +1,29 @@
-.project-container{
-    /* border:1px solid red; */
+/* .project-container {
+    border:1px solid red;
     width:1050px;
-    margin:0px auto;}
+    margin:0px auto;} */
 
-.intro-paragraph-container{
-    width:780px;
-    margin:auto;
-    margin:20px auto 80px auto;
-}
-    
-.intro-paragraph{
-    font-size:20px;
-    font-weight:200;
-    line-height: 1.4;
-    float:center;
-}
-
-.project-name-container{
-    width:100%;
-    height:45px;
-    /* border-bottom: 1px solid rgb(255, 176, 176); */
-}
-
-.title-name{
-    padding-left: 0px;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    color:rgb(87, 87, 87);
-    font-size:32px;
-    float:center;
-    font-family: 'Rajdhani', sans-serif;}
-
-.subtitle-name{
-    padding-left: 20px;
-    color:rgb(87, 87, 87);
-    font-size:32px;
-    font-family: 'Rajdhani', sans-serif;}    
-
-    /* .projects-title{
-        color:rgb(248, 100, 100);
-        margin-bottom:10px;
-        padding-left:20px;
-        font-size:25px;
-    } */
-
-.container {
-    overflow: hidden;
+    .intro-paragraph-container {
+        /* border:1px solid blue; */
+        width:80%;
+        height: auto;
+        margin:auto;
+        margin:20px auto 80px auto;
+        float: center;
     }
+    
+    .intro-paragraph {
+        font-size:20px;
+        font-weight:200;
+        line-height: 1.4;
+    }
+
+        .title-name {
+            /* color:rgb(248, 100, 100); */
+            margin-bottom:10px;
+            padding-left:20px;
+            font-size:25px;
+        }
     
 .filterDiv {
     float: left;
@@ -84,12 +61,22 @@
     color: white;
     }
 
-/* Style the skill pills */
-.skill {
-    border: 1px;
-    border-radius: 10px;
-    border-color: rgb(128, 7, 7);
-    padding: 12px 16px;
-    background-color: #f1f1f1;
-    margin: 5px;
-    }
+@media only screen and (max-width: 1100px) {
+    /* .project-container {
+        width:auto;
+        margin:0px auto;
+    } */
+        
+        .intro-paragraph {
+            font-size:2.5vw;
+            font-weight:200;
+            line-height: 1.4;
+        }
+
+            .title-name {
+                /* color:rgb(248, 100, 100); */
+                margin-bottom:10px;
+                padding-left:20px;
+                font-size:3vw;
+            }
+}
