--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,37 +1,18 @@
-.intro-paragraph-container{
-    width:780px;
-    margin:auto;
-    margin:20px auto 80px auto;
-}
-    
-.intro-paragraph{
-    font-size:20px;
-    font-weight:200;
-    line-height: 1.4;
-}
-
-.project-name-container{
-    width:100%;
-    height:45px;
-    /* border-bottom: 1px solid rgb(255, 176, 176); */
-}
-
-.title-name{
-    padding-left: 0px;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    color:rgb(87, 87, 87);
-    font-size:32px;
-    font-family: 'Rajdhani', sans-serif;}
-
 .projects-container{
-    width:100%;
-    margin-top:0px;
+    width:80%;
+    margin:auto;
     height:auto;
     display: grid;
     flex-wrap: wrap;
     align-content: flex-start;
     grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
+}
+
+.project-name-container{
+    width:80%;
+    height:45px;
+    margin: auto;
+    /* border-bottom: 1px solid rgb(255, 176, 176); */
 }
 
     .projects-project-link-container{
@@ -44,6 +25,14 @@
         /* border:1px solid green; */
         
     }
+
+    .title-name{
+        padding-left: 0px;
+        padding-top: 10px;
+        padding-bottom: 5px;
+        color:rgb(87, 87, 87);
+        font-size:32px;
+        font-family: 'Rajdhani', sans-serif;}
 
 .grid {
     display: grid;
@@ -61,7 +50,9 @@
     }
 
     .my-btn-container{
+        width: 80%;
         margin-top: 10px;
+        margin: auto;
     }
     
         /* Style the buttons */
@@ -85,32 +76,9 @@
         color: white;
         }
 
-/* @media only screen and (max-width: 1100px) {
-    .projects-container{
-        
-        width:100%;
-        max-width: 800px;
+@media only screen and (max-width: 1100px) {
+    .projects-container {
+        width:auto;
         margin:0px auto;
-        height:auto;
-        display: flex;
-        flex-wrap: wrap;
-        align-content: flex-start;
-        border:1px solid red;
-    
     }
-    
-        .projects-project-link-container{
-            position:relative;
-            flex: 1;
-            margin: auto;
-            margin: 0 0px 0 0;
-            width:50vw;
-            height:50vw;
-            max-width:50vw;
-            max-height:50vw;
-            padding-top:1vw;
-            border:1px solid green;
-            
-        }
-} */
-    
+}
