--- a/src/components/ProjectLink/ProjectLink.css
+++ b/src/components/ProjectLink/ProjectLink.css
@@ -65,3 +65,11 @@
         opacity: 0;
         transition: .6s ease all;
     }
+
+@media only screen and (max-width: 1100px) {
+    .project-link-container{
+        width:280px;
+        height:280px;
+        margin-left:30px;
+    }
+}
