--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -20,14 +20,15 @@
 .footer-container {
     position:relative;
     bottom:-100px;
-    width: 100%;
+    left: -16px;
+    width: 102.2%;
     padding-top: 1rem;
     padding-bottom: 2rem;
     padding-right: 1rem;
     padding-left: 1rem;
     background-color: #555;
     color:#fff;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
     .footer{
@@ -99,6 +100,7 @@
     .footer-container {
         height: 180px;
         padding-top:5px;
+        width: 107%;
     }
         
             .name-container{
