--- a/src/components/ProfileBox/ProfileBox.css
+++ b/src/components/ProfileBox/ProfileBox.css
@@ -1,7 +1,7 @@
 .profile-box-container{
     /* border:1px solid blue; */
     width:100%;
-    height:170px;
+    height:120px;
     margin-top:50px;
     z-index:10;}
 
@@ -10,7 +10,8 @@
         width: 80%;
         height:90px;
         margin:auto;
-        border-bottom: 1px solid #ddd;}
+        border-bottom: 1px solid #ddd;
+    }
 
         .avatar {
             /* vertical-align: middle; */
@@ -39,38 +40,6 @@
     /* float:left; */
 }
 
-.home-link-container{
-    width:780px;
-    height:100px;
-    overflow: hidden;
-    /* border:1px solid blue; */
-    margin: auto;
-    position: relative;
-    top:-70px;
-    z-index: 20;
-
-}
-.home-link{
-    width:40px;
-    opacity:.2;
-    margin:auto;
-    transition:.3s ease all;
-    z-index: 20;
-}
-.home-link:hover{
-    opacity: .5;
-    transition:.3s ease all;
-    
-}
-.is-home{
-    opacity: 0;
-    transition: 1s ease all;
-}
-.is-home:hover{
-    opacity: 0;
-    cursor: default;
-}
-
 @media only screen and (max-width: 1100px) {
     .profile-box-container {
         width:100%;
@@ -95,36 +64,4 @@
                 float:left;
                 font-family: 'Rajdhani', sans-serif;
             }
-
-    .home-link-container{
-        width:80vw;
-        height:200px;
-        overflow: hidden;
-        /* border:1px solid blue; */
-        margin: auto;
-        position: relative;
-        top:-7vw;
-        z-index: 20;
-
-    }
-    .home-link{
-        width:5vw;
-        opacity:.2;
-        margin:auto;
-        transition:.3s ease all;
-        z-index: 20;
-    }
-    .home-link:hover{
-        opacity: .5;
-        transition:.3s ease all;
-        
-    }
-    .is-home{
-        opacity: 0;
-        transition: 1s ease all;
-    }
-    .is-home:hover{
-        opacity: 0;
-        cursor: default;
-    }
 }
