--- a/src/components/ProjectView/ProjectView.css
+++ b/src/components/ProjectView/ProjectView.css
@@ -11,11 +11,23 @@
         margin:20px auto 80px auto;
         float: center;
     }
+
+    .curve { 
+        max-width: 10%; 
+        /* max-height: 50%; */
+        min-width: 150px;
+        float: left;
+        margin-right:3rem; 
+        border-radius: 50%;
+        -webkit-shape-outside:circle();
+        shape-outside:circle();
+      }
     
     .intro-paragraph {
         font-size:20px;
         font-weight:200;
         line-height: 1.4;
+        float: middle;
     }
 
         .title-name {
@@ -71,6 +83,10 @@
             font-size:2.5vw;
             font-weight:200;
             line-height: 1.4;
+        }
+
+        .curve { 
+            max-width: 30%; 
         }
 
             .title-name {
