--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,7 +4,7 @@
   outline: none;
   padding: 12px 16px;
   cursor: pointer;
-  margin: 5px;
+  /* margin: 5px; */
   }
 
 /* Add a light grey background on mouse-over */
