--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -13,7 +13,7 @@
     width:80%;
     height:45px;
     margin: auto;
-    /* border-bottom: 1px solid rgb(255, 176, 176); */
+    /* border: 1px solid rgb(255, 176, 176); */
 }
 
     .projects-project-link-container{
@@ -23,14 +23,13 @@
         width:400px;
         height:auto;
         padding-top:50px;
-        /* border:1px solid green; */
-        
+        /* border:1px solid green; */  
     }
 
     .title-name{
         padding-left: 0px;
         padding-top: 10px;
-        padding-bottom: 5px;
+        padding-bottom: 10px;
         color:rgb(87, 87, 87);
         font-size:32px;
         font-family: 'Rajdhani', sans-serif;}
@@ -52,30 +51,10 @@
 
     .my-btn-container{
         width: 80%;
-        margin-top: 10px;
-        margin: auto;
+        margin-left: 10vw;
+        /* border:1px solid green; */
     }
-    
-        /* Style the buttons */
-    .btn {
-        border: none;
-        outline: none;
-        padding: 12px 16px;
-        background-color: #f1f1f1;
-        cursor: pointer;
-        margin: 5px;
-        }
-    
-    /* Add a light grey background on mouse-over */
-    .btn:hover {
-        background-color: #ddd;
-        }
-    
-    /* Add a dark background to the active button */
-    .btn.active {
-        background-color: #666;
-        color: white;
-        }
+
 
 @media only screen and (max-width: 1100px) {
     .projects-container {
