--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,18 +1,22 @@
 .btn {
-  min-width: 40%;
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  cursor: pointer;
-  /* margin: 5px; */
+    min-width: 40%;
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    cursor: pointer;
+    /* margin: 5px; */
   }
 
 /* Add a light grey background on mouse-over */
 .btn:hover {
-  color: #666;
+    color: #666;
   }
 
 /* Add a dark background to the active button */
-.btn.active {
-  background-color: #666;
+.btn:active {
+    background-color: #666;
   }
+
+a:hover { 
+  text-decoration: underline; 
+}
