--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,6 +4,7 @@
     outline: none;
     padding: 12px 16px;
     cursor: pointer;
+    background-color: #666;
     /* margin: 5px; */
   }
 
@@ -17,6 +18,6 @@
     background-color: #666;
   }
 
-a:hover { 
+.link:hover { 
   text-decoration: underline; 
 }
