--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,23 +1,34 @@
-.btn {
-    min-width: 40%;
-    border: none;
-    outline: none;
-    padding: 12px 16px;
-    cursor: pointer;
-    background-color: #666;
-    /* margin: 5px; */
-  }
+.footer-btn {
+  min-width: 80%;
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  cursor: pointer;
+  background-color: #666;
+  margin: 5px;
+  text-align: center; 
+}
+
+.btn-container {
+  display: grid;
+}
 
 /* Add a light grey background on mouse-over */
-.btn:hover {
-    color: #666;
-  }
+.footer-btn:hover {
+  color: #666;
+  background-color: white;
+}
 
 /* Add a dark background to the active button */
-.btn:active {
-    background-color: #666;
-  }
+.footer-btn:active {
+  background-color: #666;
+}
 
 .link:hover { 
   text-decoration: underline; 
+}
+
+.footer-container {
+  width: 100%;
+  margin: none;
 }
