--- a/src/pages/Projects/ProjectPage.css
+++ b/src/pages/Projects/ProjectPage.css
@@ -132,23 +132,23 @@ ul {
     
 }
 .showcase-image-selector-image-container{
-    width:100%;
+    max-width:100%;
     height:auto;
-    margin-left:3px;
+    margin-left:5px;
     box-shadow: 2px 2px 2px #aaa;
     overflow: hidden;
 }
 
 .showcase-image-selector-image-container:hover{
     cursor: pointer;
-    box-shadow: 2px 2px 3px #666;
+    box-shadow: 2px 2px 4px #666;
     transition: .3s all ease;
 }
 
 .showcase-image-selector-image{
     object-fit: cover; 
-    width: 100%;
-    height: 100%
+    width: auto;
+    height: 100%;
 }
 
 .project-description-container{
@@ -265,7 +265,7 @@ ul {
     }
 
 
-  @media only screen and (max-width: 1100px) {
+  @media only screen and (max-width: 1000px) {
 
     .section-nav {
         display: none;
