--- a/src/pages/Projects/ProjectPage.css
+++ b/src/pages/Projects/ProjectPage.css
@@ -148,7 +148,7 @@ ul {
 .showcase-image-selector-image{
     object-fit: cover; 
     width: auto;
-    height: 100%;
+    max-height: 100%;
 }
 
 .project-description-container{
@@ -318,6 +318,11 @@ ul {
         font-size: 4vw;
         color:#777;
         font-weight: lighter;
+    }
+
+    .showcase-image-selector-container{
+        /* border:1px solid blue; */
+        margin: auto 0;
     }
     
     .showcase-image-selector-image-container:hover{
