--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -10,6 +10,7 @@
         margin:auto;
         margin:20px auto 80px auto;
         float: center;
+        text-align: center;
     }
 
     .curve { 
