fixed search filter bug

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -10,7 +10,7 @@
         margin:auto;
         margin:20px auto 80px auto;
         float: center;
-        text-align: center;
+        text-align: left;
     }
 
     .curve { 
@@ -23,13 +23,10 @@
         -webkit-shape-outside:circle();
         shape-outside:circle();
         transition-duration: 0.1s;
-      }
-
-    .curve:hover {
         -webkit-box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 1);
         -moz-box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 1);
         box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 1);
-    }
+      }
     
     .intro-paragraph {
         font-size:20px;
