updated image showcase

--- a/src/pages/Projects/ProjectPage.css
+++ b/src/pages/Projects/ProjectPage.css
@@ -13,7 +13,8 @@
     position: sticky;
     top: 2rem;
     float: left;
-    max-width: 17vw;
+    max-width: 20vw;
+    max-height: 95vh;
 }
 
 .section-nav a {
@@ -36,11 +37,11 @@ ul, ol {
 }
 
 ol {
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 ul {
-    font-size: 15px;
+    font-size: 0.75rem;
 }
 
 .contents-list {
@@ -50,7 +51,7 @@ ul {
 .project-header-container{
     /* border:1px solid blue; */
     width:900px;
-    margin:30px auto 30px;
+    margin:30px auto 0px;
 }
 
 .project-header{
@@ -60,6 +61,10 @@ ul {
     color:#666;
     font-weight: normal;
     font-family: 'Rajdhani', sans-serif;
+}
+
+.button {
+    margin-top:10px;
 }
 
 .soon-header{
@@ -82,10 +87,10 @@ ul {
 }
 
 .showcase-container {
-    /* border: 1px solid red;  */
+    border: 1px solid red; 
     width:auto;
     margin:30px auto;
-    height: auto;
+    max-height: 100%;
 }
 
 .showcase-image-container {
@@ -99,8 +104,8 @@ ul {
 
 .showcase-image{
     object-fit: contain; 
-    width: auto;
-    max-height: 55vh;
+    max-width: auto;
+    max-height: 28rem;
     object-position: center;
     margin: auto;
 }
@@ -118,7 +123,7 @@ ul {
     /* border:1px solid blue; */
     height:30px;
     padding: 9px 0px;
-    font-size:14x;
+    font-size:14px;
     color:#777;
     font-weight: lighter;
 }
@@ -127,33 +132,37 @@ ul {
     /* border:1px solid blue; */
     margin: auto 10vw;
     width:auto;
-    height:20vh;
+    height:auto;
     display: flex;
     
 }
 .showcase-image-selector-image-container{
-    max-width:100%;
-    height:auto;
-    margin-left:5px;
-    box-shadow: 2px 2px 2px #aaa;
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
+    margin-left:5px;
+    min-width: auto;
+    max-height: 100%;
+    box-shadow: 2px 2px 2px #aaa;
 }
 
 .showcase-image-selector-image-container:hover{
     cursor: pointer;
-    box-shadow: 2px 2px 4px #666;
+    box-shadow: 2px 2px 5px #666;
     transition: .3s all ease;
 }
 
 .showcase-image-selector-image{
+    flex-shrink: 0;
     object-fit: cover; 
     width: auto;
-    max-height: 100%;
+    max-height: 10vw;
 }
 
 .project-description-container{
-    max-width:90vw;
-    margin:40px 5vw 100px 20vw;
+    max-width:85vw;
+    margin:40px 5vw 100px 22.5vw;
 }
 
 .project-description{
@@ -276,6 +285,16 @@ ul {
         width:90vw;
         margin:3vw auto 3vw;
     }
+
+    .showcase-container {
+        max-width:100vw;
+        max-height:auto;
+    }
+
+    .showcase-image{
+        max-width: 100%;
+        max-height: auto;
+    }
     
     .project-header{
         width:auto;
@@ -323,6 +342,11 @@ ul {
     .showcase-image-selector-container{
         /* border:1px solid blue; */
         margin: auto 0;
+    }
+
+    .showcase-image-selector-image {
+        width: auto;
+        max-height: 25vw;
     }
     
     .showcase-image-selector-image-container:hover{
