--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   outline: none;
   padding: 12px 16px;
   cursor: pointer;
-  background-color: #666;
+  /* background-color: #666; */
   margin: 5px;
   text-align: center; 
 }
