Updated tab selector container

--- a/src/components/ProjectTiles/Projects.css
+++ b/src/components/ProjectTiles/Projects.css
@@ -1,7 +1,7 @@
 .projects-container{
     width:100%;
-    margin: auto 25px;
-    height:auto;
+    margin: auto;
+    height: auto;
     display: grid;
     flex-wrap: wrap;
     grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
@@ -19,9 +19,8 @@
         position:relative;
         flex: 1;
         margin: 15px auto;
-        width:400px;
+        width:auto;
         height:auto;
-        padding-top:15px;
         /* border:1px solid green;   */
     }
 
