--- a/src/components/ProjectTiles/ProjectTiles.css
+++ b/src/components/ProjectTiles/ProjectTiles.css
@@ -70,7 +70,7 @@
     .project-link-container{
         width:15rem;
         height:15rem;
-        margin-left:30px;
+        margin-right: 30px;
     }
 
     .project-name{
