--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,16 @@
+*, *:before, *:after{
+  box-sizing: border-box;
+  padding: 0; margin: 0;
+}
+
+.fixed_footer{
+  width: 100%;
+  height: auto;
+  background: white;
+  position: fixed; left: 0; bottom: 0;
+  z-index: -100;
+}
+
 .footer-btn {
   min-width: 80%;
   border: none;
