Email form & updated project pages

--- a/src/pages/Projects/ProjectPage.css
+++ b/src/pages/Projects/ProjectPage.css
@@ -1,6 +1,6 @@
 .root {
     background: white;
-    box-shadow: 3px 6px 5px -5px #777;
+    box-shadow: 0 4px 2px -2px #777;
     padding-bottom: 5px;
 }
 
